src/compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Shell/content/Views/Shared/_UserWidget.cshtml.pp
@using $rootnamespace$.Core.Model
<table class="table">
  <tr>
    <td style="width: 50px; border-top: 0">
      <a href="@Url.Action("Photo", "Account")" class="thumbnail">
        <img style="width: 50px" src="@Url.ProfilePicture((string)ViewBag.CurrentUser.PhotoId, "Small", (Gender)ViewBag.CurrentUser.Gender)" class="img-rounded" />
      </a>
    </td>
    <td style="border-top: 0">
      <h4>
        <a href="@Url.Action("Index", "Dashboard")">@ViewBag.CurrentUser.FirstName @ViewBag.CurrentUser.LastName</a>
      </h4>
      <a href="@Url.Action("Profile", "Account")">Edit Profile</a>
    </td>
  </tr>
</table>
